# aiogram-timepicker

./: .gitignore  LICENSE.txt  README.md  bot_example.py  pyproject.toml  requirements.txt  setup.py
aiogram_timepicker/: __init__.py  full_timepicker.py  hour_picker.py  result.py  utils.py
aiogram_timepicker/carousel/: __init__.py
aiogram_timepicker/carousel/full/: __init__.py  timepicker.py  utils.py
aiogram_timepicker/clock/: __init__.py
aiogram_timepicker/clock/single/: __init__.py
aiogram_timepicker/clock/single/base/: __init__.py  timepicker.py
aiogram_timepicker/clock/single/c24/: __init__.py  timepicker.py  utils.py
aiogram_timepicker/clock/single/c24_ts3/: __init__.py  utils.py
aiogram_timepicker/clock/single/c60_ts3/: __init__.py  timepicker.py  utils.py
aiogram_timepicker/clock/single/c60_ts5/: __init__.py  timepicker.py  utils.py
aiogram_timepicker/full/: timepicker.py
aiogram_timepicker/full/adapter/: __init__.py  second.py
aiogram_timepicker/min_sec/: timepicker.py
aiogram_timepicker/min_sec/adapter/: __init__.py  minute.py
aiogram_timepicker/panel/: __init__.py
aiogram_timepicker/panel/full/: __init__.py  timepicker.py
aiogram_timepicker/panel/full/adapter/: __init__.py  minute.py
aiogram_timepicker/panel/min_sec/: __init__.py  timepicker.py  utils.py
aiogram_timepicker/panel/single/: __init__.py
aiogram_timepicker/single/: __init__.py
aiogram_timepicker/single/hour/: timepicker.py  utils.py
aiogram_timepicker/single/minute/: __init__.py  timepicker.py
aiogram_timepicker/single/second/: timepicker.py  utils.py
(+10 files in other folders)
